# Aether

./: CMakeLists.txt  Config.yml  LICENSE  README.md  TODO.md  server
src/: AE_Client.cpp  AE_Client.hpp  AE_Config.hpp  AE_Evict.cpp  AE_Evict.hpp  AE_KVEngine.cpp  AE_KVEngine.hpp  AE_KVShard.cpp  AE_KVShard.hpp  AE_Observer.cpp  AE_Observer.hpp  AE_Persist.cpp  AE_Persist.hpp  AE_Server.cpp  AE_Server.hpp  AE_main.cpp  Aether_Persist.cpp  Aether_Persist.hpp  Aether_client.cpp  Aether_client.hpp  Aether_config.hpp  Aether_main.cpp  Aether_server.cpp  Aether_server.hpp  KVEngine.cpp  KVEngine.hpp  KVShard.cpp  KVShard.hpp  client.cpp  rdma_client.cpp  rdma_server.cpp  server.cpp
test/: SIMD_test.cpp  cista_test.cpp  performance_test.cpp  test_client.cpp  test_open_addressing.cpp  test_server.cpp
